[tool.poetry]
name = "pinter"
version = "0.1.1"
license = "MIT"
description = "Print INTERfaces and ip addresses"
authors = ["Marcin Marzec"]
readme = "README.md"
homepage = "https://github.com/mmarzec/pinter"


[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.6"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pinter = "pinter.__main__:cli"
